<resources>
    <string name="app_name">My Portfolio</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
    <string name="my_nanodegree_portfolio">My Nanodegree Portfolio</string>
</resources>
