<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mh12developers.myportfolio.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Popular Movies"
        android:id="@+id/btnPM"
        android:layout_marginTop="70dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_alignLeft="@+id/txtMNP"
        android:layout_alignStart="@+id/txtMNP"
        android:layout_alignRight="@+id/txtMNP"
        android:layout_alignEnd="@+id/txtMNP" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        android:id="@+id/btnSH"
        android:layout_gravity="center"
        android:layout_below="@+id/btnPM"
        android:layout_alignLeft="@+id/btnPM"
        android:layout_alignStart="@+id/btnPM"
        android:layout_alignRight="@+id/btnPM"
        android:layout_alignEnd="@+id/btnPM" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/btnBB"
        android:layout_gravity="center"
        android:layout_below="@+id/btnSH"
        android:layout_alignLeft="@+id/btnPM"
        android:layout_alignStart="@+id/btnPM"
        android:layout_alignRight="@+id/btnSH"
        android:layout_alignEnd="@+id/btnSH" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app_material"
        android:id="@+id/btnMYAM"
        android:layout_gravity="center"
        android:layout_below="@+id/btnBB"
        android:layout_alignLeft="@+id/btnBB"
        android:layout_alignStart="@+id/btnBB"
        android:layout_alignRight="@+id/btnBB"
        android:layout_alignEnd="@+id/btnBB" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous"
        android:id="@+id/btnGU"
        android:layout_gravity="center"
        android:layout_below="@+id/btnMYAM"
        android:layout_alignLeft="@+id/btnMYAM"
        android:layout_alignStart="@+id/btnMYAM"
        android:layout_alignRight="@+id/btnMYAM"
        android:layout_alignEnd="@+id/btnMYAM" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/btnC"
        android:layout_gravity="center"
        android:layout_below="@+id/btnGU"
        android:layout_alignLeft="@+id/btnGU"
        android:layout_alignStart="@+id/btnGU"
        android:layout_alignRight="@+id/btnGU"
        android:layout_alignEnd="@+id/btnGU" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/my_nanodegree_portfolio"
        android:id="@+id/txtMNP"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
